2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.[ch], gui/gdmlogin.c,
	  gui/greeter/greeter_item_ulist.c:  Usernames with non-utf8
	  characters were causing GDM GUI to crash when it tried to
	  display in the face browser.  This patch fixes so non-utf8
	  characters display as '?'.  Fixes bug #426647.  Patch by
	  Ray Strode <rstrode@redhat.com>.

2007-04-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Return correct value when GET_CONFIG_FILE is 
	  asked for.  Previously the value was NULL when using the compiled
	  in default.
	* gui/gdmcomm.c: Make the message a bit nicer when GDM slave 
	  notices GDM daemon isn't running.
	* docs/C/gdm.xml: Improved docs some more.  Lukasz didn't update
	  all the places where the Face Browser change needed to be
	  mentioned.

2007-04-05  Lukasz Zalewski <lukas@dcs.qmul.ac.uk>

        * gui/gdmsetup.glade, gui/gdmsetup.c, doc/C/gdm.xml: 
          Added a "Themed with face browser option to the Local/Remote Style 
          ComboBox and updated the documentation. Fixes bug #423300
        * gui/gdmsetup.glade: Changd the spacing between elements in the General
          tab as an aftermath of bug #403242. Also fixes some of the issues 
          found in bug #423158.
	
2007-04-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/xdmcp.c: Fix compile for Solaris.

2007-04-04  William Jon McCann  <mccann@jhu.edu>

	* common/test-log.c: (test_log), (main):
	Add file.

2007-04-04  William Jon McCann  <mccann@jhu.edu>

	* common/gdm-log.c: (gdm_log_init):
	* daemon/misc.h:
	Fix building on Solaris.

2007-04-04  William Jon McCann  <mccann@jhu.edu>

	* daemon/gdm-socket-protocol.h:  Oops add file
	missing from last commit.

2007-04-02  William Jon McCann  <mccann@jhu.edu>

	* common/Makefile.am:
	* common/gdm-common.c: (v4_v4_equal), (v6_v6_equal),
	(gdm_address_equal), (gdm_address_is_loopback),
	(gdm_address_get_info):
	* common/gdm-common.h:
	* common/gdm-config.c: (gdm_config_peek_value),