@@ -1,5 +1,11 @@
 2007-04-06  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmcomm.c: Fix messages so that they don't imply that
+	  Xnest is the nested X server program, since it may be
+	  Xephyr, or another program.
+
+2007-04-06  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmcommon.[ch], gui/gdmlogin.c,
 	  gui/greeter/greeter_item_ulist.c:  Usernames with non-utf8
 	  characters were causing GDM GUI to crash when it tried to
